# Pythinker-ai

./: .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  agent-architecture.md  core_agent_lines.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.agents/: README.md
.agents/plans/: 2026-05-04-simplification-alignment.md  2026-05-05-coding-prompt-uplift-impl.md  2026-05-05-coding-prompt-uplift.md  2026-05-05-onboard-phase-2-multi-agent.md
.agents/scripts/: validate_skills.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  install-smoke.yml  publish.yml
bridge/: AGENTS.md  package-lock.json  package.json
bridge/src/: index.ts  server.ts  whatsapp.ts
docker/: browser-entrypoint.sh
docs/: ARCHITECTURE.md  README.md  RELEASES.md  agent-social-network.md  channel-plugin-guide.md  chat-apps.md  chat-commands.md  cli-reference.md  configuration.md  deployment.md  memory.md  multiple-instances.md  my-tool.md  nanobot-upstream-audit.md  onboarding.md  openai-api.md  python-sdk.md  quick-start.md  release-cadence.md  runtime.md  security.md  websocket.md
pythinker/: __init__.py  __main__.py  pythinker.py
pythinker/admin/: __init__.py  redact.py  service.py  snapshot.py
pythinker/agent/: __init__.py  autocompact.py  budget.py  chat_title.py  checkpoint.py  context.py  dynamic_injection.py  hook.py  loop.py  loop_context.py  loop_reload.py  loop_tools.py  memory.py  observability.py  pricing.py  runner.py  search.py  skills.py  subagent.py  task_store.py  tasks.py  turn_writer.py  usage.py  usage_ledger.py
pythinker/api/: __init__.py  server.py
pythinker/auth/: __init__.py  oauth_remote.py  pkce.py  refresh_lock.py
pythinker/bus/: __init__.py  events.py  queue.py
pythinker/channels/: AGENTS.md  __init__.py  base.py  discord.py  email.py  manager.py  matrix.py  msteams.py  registry.py  slack.py  telegram.py  telegram_markdown.py  telegram_media.py  websocket.py  whatsapp.py
pythinker/cli/: __init__.py  agents.py  bootstrap.py  commands.py  doctor.py  models.py  onboard.py  onboard_auth.py  onboard_options.py  onboard_types.py  render.py  repl.py  serve.py  star_prompt.py  stream.py  updates.py
pythinker/command/: __init__.py  builtin.py  metadata.py  router.py
pythinker/config/: __init__.py  editing.py  loader.py  paths.py  schema.py
pythinker/cron/: __init__.py  service.py
pythinker/heartbeat/: __init__.py  service.py
pythinker/providers/: AGENTS.md  __init__.py  _message_sanitize.py  anthropic_count_tokens.py  anthropic_provider.py  azure_openai_provider.py  base.py  factory.py  github_copilot_provider.py  limits.py  local_models.py  model_metadata.py  model_profiles.json  model_profiles.py  openai_codex_provider.py  openai_compat_provider.py  registry.py  transcription.py
pythinker/release/: __init__.py  checks.py
pythinker/runtime/: __init__.py  _bootstrap.py  context.py  egress.py  manifest.py  policy.py  telemetry.py
pythinker/session/: __init__.py  manager.py
pythinker/skills/: README.md
pythinker/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
pythinker/utils/: __init__.py  document.py  evaluator.py  gitstore.py  helpers.py  log.py  media_decode.py  messages.py  nio_logging.py  prompt_templates.py  restart.py  runtime.py  text.py  time.py  tokens.py  tool_hints.py  update.py  workspace.py
scripts/: update_model_metadata.py
tests/: conftest.py  test_agents_skills.py  test_api_attachment.py  test_api_stream.py  test_build_status.py  test_context_build_user_content.py  test_context_documents.py  test_docker.sh  test_document_parsing.py  test_msteams.py  test_openai_api.py  test_package_version.py  test_pythinker_facade.py  test_tool_contextvars.py  test_truncate_text_shadowing.py
tests/admin/: test_config_backups.py  test_redact.py
tests/agent/: test_auto_compact.py  test_budget_policy.py  test_chat_title.py  test_checkpoint.py  test_coding_directives.py  test_consolidate_offset.py  test_consolidator.py  test_consolidator_boundary_relaxed.py  test_context_prompt_cache.py  test_cursor_recovery.py  test_dream.py  test_dynamic_injection.py  test_evaluator.py  test_gemini_thought_signature.py  test_git_store.py  test_heartbeat_service.py  test_hook_composite.py  test_loop_browser_wiring.py  test_loop_compaction_locking.py  test_loop_consolidation_tokens.py  test_loop_cron_timezone.py  test_loop_drain_pending.py  test_loop_provider_limits_clamp.py  test_loop_save_turn.py  test_loop_turn_id.py  test_loop_window_derivation.py  test_mcp_connection.py  test_mcp_transient_retry.py  test_memory_store.py  test_microcompact_flag.py  test_model_override.py  test_observability.py  test_onboard_logic.py  test_runner.py  test_runner_snip_policy.py  test_search.py  test_session_atomic.py  test_session_delete.py  test_session_load_existing.py  test_session_manager_history.py  (+13 more)
tests/auth/: test_oauth_remote.py  test_pkce.py  test_refresh_lock.py  test_refresh_lock_integration.py  test_resolver.py
tests/channels/: test_base_channel.py  test_channel_manager_delta_coalescing.py  test_channel_plugins.py  test_discord_channel.py  test_email_channel.py  test_matrix_channel.py  test_slack_channel.py  test_telegram_channel.py  test_websocket_actions.py  test_websocket_admin.py  test_websocket_bootstrap.py  test_websocket_channel.py  test_websocket_commands.py  test_websocket_envelope_media.py  test_websocket_http_routes.py  test_websocket_integration.py  test_websocket_media_route.py  test_websocket_models.py  test_websocket_pin_archive.py  test_websocket_search.py  test_websocket_security.py  test_websocket_set_model.py  test_websocket_transcribe.py  test_websocket_usage.py  test_whatsapp_channel.py  ws_test_client.py
tests/cli/: test_agents_cmd.py  test_auth_channels_list.py  test_backup_cleanup.py  test_clack_hint_truncate.py  test_cli_input.py  (+20 more)
webui/: AGENTS.md  README.md  biome.json  index.html  package.json  vite.config.ts
(+397 files in other folders)
