[project]
name = "pythinker-ai"
version = "2.1.0"
description = "Pythinker — an ultra-lightweight personal AI agent framework with built-in chat channels, memory, MCP, and an OpenAI-compatible API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Elkholy", email = "moelkholy1995@gmail.com" },
    { name = "Pythinker contributors" },
]
maintainers = [
    { name = "Mohamed Elkholy", email = "moelkholy1995@gmail.com" },
]
keywords = [
    "ai",
    "agent",
    "assistant",
    "chatbot",
    "llm",
    "anthropic",
    "openai",
    "mcp",
    "telegram",
    "slack",
    "discord",
    "whatsapp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
license-files = [
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "socksio>=1.0.0,<2.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0; sys_platform != 'win32'",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "questionary>=2.0.0,<3.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<6.0.0",
    "openai>=2.8.0",
    "tiktoken>=0.12.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "dulwich>=0.22.0,<1.0.0",
    "pyyaml>=6.0,<7.0.0",
    "pypdf>=5.0.0,<6.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "filelock>=3.25.2",
    "packaging>=24.0,<26",
    "playwright>=1.48,<2",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
api = [
    "aiohttp>=3.9.0,<4.0.0",
]
msteams = [
    "PyJWT>=2.0,<3.0",
    "cryptography>=41.0",
]

matrix = [
    "matrix-nio[e2e]>=0.25.2; sys_platform != 'win32'",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]
discord = [
    "discord.py>=2.5.2,<3.0.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
pdf = [
    "pymupdf>=1.25.0",
]
reports = [
    # Used by the make_pdf agent tool to render Markdown reports to styled PDFs.
    # Kept in a separate extra (vs. the read-only `pdf` extra above) so users
    # who only consume PDFs aren't pulled into the writer dependency surface.
    "reportlab>=4.0.0,<5.0.0",
]
browser = []
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-httpx>=0.30.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.1.0",
    "pymupdf>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/mohamed-elkholy95/Pythinker-ai"
Repository = "https://github.com/mohamed-elkholy95/Pythinker-ai"
Documentation = "https://github.com/mohamed-elkholy95/Pythinker-ai/tree/main/docs"
Issues = "https://github.com/mohamed-elkholy95/Pythinker-ai/issues"
Changelog = "https://github.com/mohamed-elkholy95/Pythinker-ai/releases"

[project.scripts]
pythinker = "pythinker.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "pythinker/**/*.py",
    "pythinker/templates/**/*.md",
    "pythinker/skills/**/*.md",
    "pythinker/skills/**/*.sh",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
    "bridge/node_modules",
    "bridge/dist",
    "webui/node_modules",
    "webui/dist",
    "**/.pytest_cache",
    "**/.ruff_cache",
]

[tool.hatch.build.targets.wheel]
packages = ["pythinker"]

[tool.hatch.build.targets.wheel.sources]
"pythinker" = "pythinker"

[tool.hatch.build.targets.wheel.force-include]
"bridge/src" = "pythinker/bridge/src"
"bridge/package.json" = "pythinker/bridge/package.json"
"bridge/package-lock.json" = "pythinker/bridge/package-lock.json"
"bridge/tsconfig.json" = "pythinker/bridge/tsconfig.json"

[tool.hatch.build.targets.sdist]
include = [
    "pythinker/",
    "bridge/src/",
    "bridge/package.json",
    "bridge/package-lock.json",
    "bridge/tsconfig.json",
    "README.md",
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "browser: requires the pythinker-browser docker service (opt-in, gated by env var)",
    "timeout: per-test wall-clock budget (advisory; pytest-timeout not installed)",
]

[tool.coverage.run]
source = ["pythinker"]
omit = ["tests/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
